--- a/hawc/apps/assessment/templates/assessment/search.html
+++ b/hawc/apps/assessment/templates/assessment/search.html
@@ -61,6 +61,9 @@
                     {% if not object.published %}
                       <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
                     {% endif %}
+                    {% if object.caption %}
+                      <div class='text-muted' title="{{object.caption|striptags|safe}}">{{object.caption|striptags|truncatewords:20|safe}}</div>
+                    {% endif %}
                   </td>
                   <td>
                     {{object.get_visual_type_display}}
