--- a/hawc/apps/assessment/templates/assessment/search.html
+++ b/hawc/apps/assessment/templates/assessment/search.html
@@ -61,6 +61,9 @@
                     {% if not object.published %}
                       <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
                     {% endif %}
+                    {% for labeled_item in object.shown_labels %}
+                      {% include "assessment/fragments/label.html" with label=labeled_item.label anchor_tag=True %}
+                    {% endfor %}
                     {% if object.caption %}
                       <div class='text-muted' title="{{object.caption|striptags|safe}}">{{object.caption|striptags|truncatewords:20|safe}}</div>
                     {% endif %}
