navbar authentication change

--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -35,9 +35,9 @@
           <a class="dropdown-item" href="{% url 'assessment:full_list' %}">View all assessments</a>
         {% endif %}
         <div class="dropdown-divider"></div>
-        <form class="dropdown-item" method="post" action="{% url 'user:logout' %}">
+        <form method="post" action="{% url 'user:logout' %}">
           {% csrf_token %}
-          <button class="unstyled-action-button logout-btn" type="submit">Logout</button>
+          <button class="dropdown-item logout-btn" type="submit">Logout</button>
         </form>
       </div>
     </li>
