--- a/hawc/static/css/hawc.css
+++ b/hawc/static/css/hawc.css
@@ -48,6 +48,14 @@ input[type="submit"].btn, section button.btn, section input[type="button"].btn, 
     padding-left: 2rem;
     font-weight: normal;
 }
+
+.navbar-authenticated {
+    background-color: #eeeef2;
+}
+
+.navbar {
+    padding: 0.75rem 1rem;
+}
 /* end sidebar */
 .tny {
     font-size: 0.75rem !important;
