--- a/hawc/templates/base.html
+++ b/hawc/templates/base.html
@@ -69,7 +69,7 @@
         <div class="row no-gutters" style="min-height: 100vh;">
           {% block sidebar_outer %}{% endblock sidebar_outer %}
           <div class="col overflow-auto">
-            <div id="main-content-container" class="container-fluid">
+            <div id="main-content-container" class="container-fluid mt-2">
               {% block breadcrumbs_outer %}{% endblock breadcrumbs_outer %}
               {% include "includes/messages.html" %}
               {% include "includes/htmx_alert.html" %}
