implement bmds modeling using pybmds (#1145)
* convert conint/confloat to Annotated

* remove nlopt vendor

* swap from bmds to pybmds

* remove old approaches

* vendor legacy bmds 2 logic

* add detail modal

* make sure serializers are registered on app startup

* remove unused 330 runs

* add bmd analysis

* fix test coverage

* build word report

* begin figure rework

* implement more modern plots

* fix typo

* add plots

* move to component default

* fix modal not actually closing

* add delay so it layouts correct size

* add a wait for all plots

* add bmd integration tests

* restructure create bmd tab; put behind a beta test group

* vendor formatters from usepa/bmds-ui

* use correct formatters

* try to get parity with usepa/bmds-ui

* add formatter for incidence

* show model recommendation notes too

* change from # to N

* remove migrations

* updates

* reorganize run metadata

* create a word report

* fix tests

* update default models used in analyses

* margin tweak

---------

Co-authored-by: casey1173 <caseyhansen1999@gmail.com>

--- a/hawc/apps/bmd/templates/bmd/session_detail.html
+++ b/hawc/apps/bmd/templates/bmd/session_detail.html
@@ -6,12 +6,15 @@
     {% if obj_perms.edit and crud == "Read" %}
       {% actions %}
         <span class="dropdown-header">BMD editing</span>
-        {% if object.can_edit %}<a class="dropdown-item" href="{{object.get_update_url}}">Update</a>{% endif %}
+        {% if not object.is_bmds_version2 %}<a class="dropdown-item" href="{{object.get_update_url}}">Update</a>{% endif %}
         <a class="dropdown-item" href="{{object.get_delete_url}}">Delete</a>
+        {% if not object.is_bmds_version2 and object.has_results %}
+          <a class="dropdown-item" href="{{object.get_report_url}}">Download Report</a>
+        {% endif %}
       {% endactions %}
     {% endif %}
   </div>
-  {% if obj_perms.edit and crud == "Read" and not object.can_edit %}{% include 'bmd/_read_only_session_alert.html' %}{% endif %}
+  {% if obj_perms.edit and crud == "Read" and object.is_bmds_version2 %}{% include 'bmd/_read_only_session_alert.html' %}{% endif %}
   <div id="main"></div>
 {% endblock %}
 
