--- a/hawc/apps/animal/templates/animal/endpoint_detail.html
+++ b/hawc/apps/animal/templates/animal/endpoint_detail.html
@@ -5,30 +5,24 @@
   {% if crud == "Read" %}
     <div class="d-flex">
       <h2>{{object}}</h2>
-      {% if obj_perms.edit %}
+      {% if obj_perms.edit or bmd_session %}
         {% actions %}
-          <span class="dropdown-header">Endpoint Editing</span>
-          <a class="dropdown-item" href="{{ object.get_update_url }}">Update endpoint</a>
-          <a class="dropdown-item" href="{% audit_url object %}">View change logs</a>
-          <a class="dropdown-item" href="{% url 'animal:endpoint_delete' object.pk %}">Delete endpoint</a>
+          {% if obj_perms.edit %}
+            <span class="dropdown-header">Endpoint Editing</span>
+            <a class="dropdown-item" href="{{ object.get_update_url }}">Update endpoint</a>
+            <a class="dropdown-item" href="{% audit_url object %}">View change logs</a>
+            <a class="dropdown-item" href="{% url 'animal:endpoint_delete' object.pk %}">Delete endpoint</a>
+          {% endif %}
           {% if assessment.enable_bmd and object.bmd_modeling_possible %}
-            {% if bmd_session or assessment.bmd_settings.can_create_sessions %}
-              <div class="dropdown-divider"></div>
-              <span class="dropdown-header">BMD Modeling</span>
-              {% if bmd_session %}
-                <a class="dropdown-item" href="{{bmd_session.get_absolute_url}}">Latest session</a>
-                <a class="dropdown-item" href="{% url 'bmd:session_list' object.pk %}">All sessions</a>
-              {% elif assessment.bmd_settings.can_create_sessions %}
-                <a class="dropdown-item" href="{% url 'bmd:session_create' object.pk %}">Create</a>
-              {% endif %}
+            <span class="dropdown-header">BMD Modeling</span>
+            {% if bmd_session %}
+              <a class="dropdown-item" href="{{bmd_session.get_absolute_url}}">Latest session</a>
+              <a class="dropdown-item" href="{% url 'bmd:session_list' object.pk %}">All sessions</a>
+            {% endif %}
+            {% if user.is_beta_tester and obj_perms.edit %}
+              <a class="betatester dropdown-item" href="{% url 'bmd:session_create' object.pk %}">Create</a>
             {% endif %}
           {% endif %}
-        {% endactions %}
-      {% elif assessment.enable_bmd and object.bmd_modeling_possible and bmd_session %}
-        {% actions %}
-          <span class="dropdown-header">BMD Modeling</span>
-          <a class="dropdown-item" href="{{bmd_session.get_absolute_url}}">Latest session</a>
-          <a class="dropdown-item" href="{% url 'bmd:session_list' object.pk %}">All sessions</a>
         {% endactions %}
       {% endif %}
     </div>
