--- a/hawc/templates/includes/navigation.html
+++ b/hawc/templates/includes/navigation.html
@@ -2,11 +2,11 @@
 
 {% block navbar_outer %}
   {% if flavor == "EPA" %}
-    <nav class="navbar hawc-header justify-content-between">
-      <h2>
+    <nav class="navbar hawc-header justify-content-between d-flex align-items-center {% if user.is_authenticated %} navbar-dark bg-dark {% endif %}">
+      <h2 class="m-0">
         <a href="{% url 'home' %}">Health Assessment Workspace Collaborative (HAWC)</a>
       </h2>
-      <ul id="navbarSupportedContent" class="nav text-right">
+      <ul class="nav text-right m-0">
         {% if user.is_authenticated %}
           {% include "includes/_navigation_links.html" with contact_only=False %}
         {% else %}
@@ -15,15 +15,11 @@
       </ul>
     </nav>
   {% else %}
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <nav class="navbar navbar-expand-sm  {% if user.is_authenticated %} navbar-dark bg-dark {% else %} navbar-light bg-light {% endif %} ">
       <a class="ml-3 navbar-brand" href="{% url 'home' %}">
-        <img alt="The website logo" src="{% static 'img/HAWC-400.png' %}"  width="68" />
+        <img alt="The website logo" src="{% if user.is_authenticated %}{% static 'img/HAWC-dark.svg' %}{% else %}{% static 'img/HAWC.svg' %}{% endif %}"  width="80" />
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <ul id="navbarSupportedContent" class="nav navbar-nav collapse navbar-collapse justify-content-end" >
+      <ul class="nav navbar-nav collapse navbar-collapse justify-content-end" >
         {% include "includes/_navigation_links.html" with contact_only=False %}
       </ul>
     </nav>
