--- a/hawc/apps/summary/templates/summary/visual_form.html
+++ b/hawc/apps/summary/templates/summary/visual_form.html
@@ -34,18 +34,17 @@
       "assessment": {{assessment.id}},
       "crud": "{{crud}}",
       "csrf": "{{csrf_token}}",
-      "dose_units": {{dose_units|safe}},
       "instance": {{instance|safe}},
       "visual_type": {{visual_type}},
       "cancel_url": "{% if crud == "Create" %}{% url 'summary:visualization_list' pk=assessment.id %}{% else %}{{object.get_absolute_url}}{% endif %}",
       "data_url": "{% url 'summary:api:visual-list' %}",
       "endpoint_url": "{% url 'autocomplete' 'animal-endpointautocomplete' %}",
       "preview_url": "{% url 'summary:visualization_create_tester' assessment.id visual_type evidence_type %}",
-      "rob_metrics": {{rob_metrics|safe}},
+      {% if rob_metrics %}"rob_metrics": {{rob_metrics|safe}},{% endif %}
+      {% if api_data_url %}"api_data_url": "{{api_data_url|safe}}",{% endif %}
       "initial_data": {{initial_data|safe}},
       "api_heatmap_datasets": "{{form.instance.get_api_heatmap_datasets}}",
       "clear_cache_url": "{{assessment.get_clear_cache_url}}"
-      {% if api_data_url %},"api_data_url": "{{api_data_url|safe}}"{% endif %}
     }
   </script>
   <script type="text/javascript">
