--- a/hawc/apps/summary/templates/summary/visual_form_dp.html
+++ b/hawc/apps/summary/templates/summary/visual_form_dp.html
@@ -28,7 +28,7 @@
       window.app.startup("smartTagsStartup", function(smartTags){
         new smartTags.SmartTagEditor(
           $('#id_caption'),
-          {submitEl: '#dataPivotForm', takeFocusEl: "#id_evidence_type"}
+          {submitEl: '#visualForm', takeFocusEl: "#id_evidence_type"}
         );
       })
 
