--- a/hawc/apps/summary/templates/summary/visual_detail_dp.html
+++ b/hawc/apps/summary/templates/summary/visual_detail_dp.html
@@ -8,7 +8,7 @@
 
 {% block content %}
   <div class="d-flex">
-    <h2>{{object}}</h2>
+    <h2>{% debug_badge object.id %}{{object}}</h2>
     {% include "assessment/fragments/label_indicators.html" %}
     {% include "common/unpublished_badge.html" %}
     {% actions %}
